# error_handling_revisited

./: README.md
cfp/: cfp.md
demo/: demo.code-workspace  demo.md
examples/cpp/: CMakeLists.txt  alt.cc  build  example02.cc  example03.cc  example04.cc  example05.cc  example06.cc  example07.cc  example08.cc  example1.cc  example10.cc  example11.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  example6b.cc  example6c.cc  example7.cc  example7b.cc  example7c.cc  example8.cc  example9.cc  example9b.cc
examples/haskell/: .gitignore  build  either.hs  example.hs  example01.hs  example02.hs  example03.hs  example04.hs  passing_state.hs
examples/rust/: .gitignore  build  example01.rs  example02.rs  result.rs  result2.rs
paper/: ESE_Paper.md
paper/code/: abb1.cc  abb2.cc  abb3.cc  abb4.hs  abb5.rs  abb6.cc  abb7.cc  abb8.cc  abb9.cc
slides/: .gitignore  .prezrc  Makefile  README.md  gamepad.py  package.json  print.sh  remark-index.html  slides.html
slides-patat/: show  slides.md
slides-prez/: README.md
slides-prez/slides/: 01-Title.md  02-Srsly.md  03-What_then.md  11-CPP_no_handling.md
slides/remark/: remark.js
slides/slides/: 01-Title.md  02-Code.md  02-Srsly.md  03-Haskell.md  03-What_then.md  04-Image.md  05-background.md  11-CPP_no_handling.md  14-Haskell.md  99-End.md
slides/src/: index.html
