cmake_minimum_required(VERSION 3.14)

project(cpp_examples)

add_library(settings INTERFACE)
target_compile_features(settings INTERFACE cxx_std_17)
target_compile_options(settings INTERFACE "-Wall" "-Werror")

function(add_example NAME)
  set(SOURCE "${NAME}.cc")
  add_executable(${NAME} ${SOURCE})
  target_link_libraries(${NAME} PRIVATE settings)
endfunction(add_example)

add_example(example1)
add_example(example2)
add_example(example3)
add_example(example4)
add_example(example5)
add_example(example6)
add_example(example6b)
add_example(example6c)
add_example(example7)
add_example(example7b)
add_example(example7c)
